# cursor-2d-animation-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  prompts.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-hf-space.yml
chroma_db_manim/: chroma.sqlite3
