[project]
name = "2d-animation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "asttokens==3.0.0",
    "async-timeout==4.0.3",
    "attrs==25.3.0",
    "av==13.1.0",
    "beautifulsoup4==4.13.4",
    "bitsandbytes>=0.47.0",
    "bottleneck==1.5.0",
    "cachetools==5.5.2",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "chromadb>=1.3.4",
    "click==8.2.1",
    "cloup==3.0.8",
    "colorama==0.4.6",
    "comm==0.2.3",
    "ctransformers>=0.2.27",
    "data==0.4",
    "dataclasses-json==0.6.7",
    "debugpy==1.8.16",
    "decorator==5.2.1",
    "deprecation==2.1.0",
    "docstring-parser==0.17.0",
    "dotenv==0.9.9",
    "exceptiongroup==1.3.0",
    "executing==2.2.0",
    "fastapi>=0.116.1",
    "ffmpeg-python==0.2.0",
    "filetype==1.2.0",
    "frozenlist==1.7.0",
    "funcsigs==1.0.2",
    "future==1.0.0",
    "glcontext==3.0.0",
    "google-ai-generativelanguage==0.6.18",
    "google-api-core==2.25.1",
    "google-auth==2.40.3",
    "google-cloud-aiplatform==1.109.0",
    "google-cloud-bigquery==3.35.1",
    "google-cloud-core==2.4.3",
    "google-cloud-resource-manager==1.14.2",
    "google-cloud-storage==2.19.0",
    "google-crc32c==1.7.1",
    "google-genai==1.30.0",
    "google-resumable-media==2.7.2",
    "google-search-results>=2.4.2",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.2.4",
    "grpc-google-iam-v1==0.14.2",
    "grpcio==1.74.0",
    "grpcio-status==1.74.0",
    "h11==0.16.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "hyperframe==6.1.0",
    "idna==3.10",
    "imageio-ffmpeg==0.6.0",
    "ipykernel==6.30.1",
    "ipython==8.37.0",
    "isosurfaces==0.1.2",
    "jedi==0.19.2",
    "jinja2>=3.1.6",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-core==0.3.74",
    "langchain-google-genai==2.1.9",
    "langchain-google-vertexai==2.0.28",
    "langchain-huggingface>=0.3.1",
    "langchain-mistralai>=0.2.12",
    "langchain-ollama>=0.3.7",
    "langchain-tavily==0.2.11",
    "langchain-text-splitters==0.3.9",
    "langchainhub>=0.1.18",
    "langgraph==0.6.4",
    "langgraph-checkpoint==2.1.1",
    "langgraph-cli[inmem,inmen]==0.4.0",
    "langgraph-prebuilt==0.6.4",
    "langgraph-sdk==0.2.0",
    "langsmith==0.4.13",
    "latex==0.7.0",
    "manim==0.19.0",
    "manimpango==0.6.0",
    "mapbox-earcut==1.0.3",
    "markdown-it-py==3.0.0",
    "marshmallow==3.26.1",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistralai>=1.9.11",
    "moderngl==5.12.0",
    "moderngl-window==3.1.1",
    "multidict==6.6.4",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "numexpr==2.11.0",
    "numpy==2.2.6",
    "orjson==3.11.1",
    "ormsgpack==1.10.0",
    "packaging==25.0",
    "parso==0.8.5",
    "pillow==11.3.0",
    "platformdirs==4.3.8",
    "postgrest==1.1.1",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.2",
    "proto-plus==1.26.1",
    "protobuf==6.31.1",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "pyarrow==19.0.1",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycairo==1.28.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pydub==0.25.1",
    "pyglet==2.1.6",
    "pyglm==2.8.2",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pywin32==311",
    "pyyaml==6.0.2",
    "pyzmq==27.0.2",
    "realtime==2.7.0",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    "rich==14.1.0",
    "rsa==4.9.1",
    "scipy==1.15.3",
    "screeninfo==0.8.1",
    "sentence-transformers>=5.1.2",
    "sentencepiece>=0.2.1",
    "shapely==2.1.1",
    "shutilwhich==1.1.0",
    "six==1.17.0",
    "skia-pathops==0.8.0.post2",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.43",
    "srt==3.5.3",
    "stack-data==0.6.3",
    "storage3==0.12.1",
    "streamlit>=1.49.1",
    "strenum==0.4.15",
    "supabase==2.18.1",
    "supabase-auth==2.12.3",
    "supabase-functions==0.10.1",
    "svgelements==1.9.6",
    "tempdir==0.7.1",
    "tenacity==9.1.2",
    "text-generation>=0.7.0",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers>=4.56.2",
    "typing-extensions==4.14.1",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "uvicorn>=0.35.0",
    "validators==0.35.0",
    "watchdog==6.0.0",
    "wcwidth==0.2.13",
    "websockets==15.0.1",
    "xxhash==3.5.0",
    "yarl==1.20.1",
    "zstandard==0.23.0",
]

[tool.uv.workspace]
members = [
    "manimations",
]
